Fix html structure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <html>
+	<head>
+		<style>
+			div {
+				float: left;
+			}
+		</style>
+	</head>
 	<body>
-		<h1>HCavil</h1>
-		<video src="cut.mp4" controls id="video">
-			<track src="test.vtt" kind="captions" srclang="pl" default></track>
-		</video>
+		<div >
+			<h1>HCavil1</h1>
+			<video src="cut.mp4" controls id="video">
+				<track src="test.vtt" kind="captions" srclang="pl" default></track>
+			</video>
+		</div>
+		<div style="clear: both;">
+			<h1>HCavil2</h1>
+			<video src="cut.mp4" controls id="video">
+				<track src="test.vtt" kind="captions" srclang="pl" default></track>
+			</video>
+		</div>
+		<div>
+			<h1>HCavi3</h1>
+			<video src="cut.mp4" controls id="video">
+				<track src="test.vtt" kind="captions" srclang="pl" default></track>
+			</video>
+		</div>
+		<div style="clear: both;">
+			<h1>HCavil4</h1>
+			<video src="cut.mp4" controls id="video">
+				<track src="test.vtt" kind="captions" srclang="pl" default></track>
+			</video>
+		</div>
 	</body>
 </html>
 
