--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 	<body>
 		<div >
 			<h1>HCavil1</h1>
-			<video src="cut.mp4" controls id="video">
+			<video width="320" height="240" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
 		<div style="clear: both;">
 			<h1>HCavil2</h1>
-			<video src="cut.mp4" controls id="video">
+			<video width="320" height="240" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
 		<div>
 			<h1>HCavi3</h1>
-			<video src="cut.mp4" controls id="video">
+			<video width="320" height="240" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
 		<div style="clear: both;">
 			<h1>HCavil4</h1>
-			<video src="cut.mp4" controls id="video">
+			<video width="320" height="240" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
