--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
-		<div style="clear: both;">
+		<div>
 			<h1>HCavil2</h1>
 			<video width="800" height="615" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
@@ -26,7 +26,7 @@
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
-		<div style="clear: both;">
+		<div>
 			<h1>HCavil4</h1>
 			<video width="800" height="615" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
