--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <html>
 	<head>
 		<style>
-			div {
+			.videoDiv {
 				float: left;
 				width: 50%;
+				height: 45%;
 			}
 		</style>
 	</head>
 	<body>
-		<div >
+		<div class ="videoDiv">
 			<h1>HCavil1</h1>
 			<video width="800" height="615" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
-		<div>
+		<div class ="videoDiv">
 			<h1>HCavil2</h1>
 			<video width="800" height="615" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
-		<div>
+		<div class ="videoDiv">
 			<h1>HCavi3</h1>
 			<video width="800" height="615" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
-		<div>
+		<div class ="videoDiv">
 			<h1>HCavil4</h1>
 			<video width="800" height="615" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
