--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 	<head>
 		<style>
+			html{
+				height: 100%
+			}
+
 			.videoDiv {
 				float: left;
 				width: 50%;
-				height: 45%;
 			}
 		</style>
 	</head>
