--- a/index.html
+++ b/index.html
@@ -12,26 +12,27 @@
 		</style>
 	</head>
 	<body>
+		<h1>Model diaryzacyjny: 81% dokładności</h1>
 		<div class ="videoDiv">
-			<h1>HCavil1</h1>
+			<h2>HCavil1</h2>
 			<video width="800" height="615" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
 		<div class ="videoDiv">
-			<h1>HCavil2</h1>
+			<h2>HCavil2</h2>
 			<video width="800" height="615" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
 		<div class ="videoDiv">
-			<h1>HCavi3</h1>
+			<h2>HCavi3</h2>
 			<video width="800" height="615" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
 		<div class ="videoDiv">
-			<h1>HCavil4</h1>
+			<h2>HCavil4</h2>
 			<video width="800" height="615" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
