--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</style>
 	</head>
 	<body>
-		<h1>Model diaryzacyjny: 81% dokładności</h1>
+		<h1 style="text-align: center;">Model diaryzacyjny: 81% dokładności</h1>
 		<div class ="videoDiv">
 			<h2>HCavil1</h2>
 			<video width="800" height="615" src="cut.mp4" controls id="video">
@@ -25,8 +25,9 @@
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
+		<h1 style="text-align: center;">Model segmentowy: 79% dokładności</h1>
 		<div class ="videoDiv">
-			<h2>HCavi3</h2>
+			<h2>HCavil3</h2>
 			<video width="800" height="615" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
