--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<style>
 			h1{
-				padding: 10 px;
+				margin: 10 px;
 			}
 			html{
 				height: 100%
@@ -10,7 +10,7 @@
 
 			.videoDiv {
 				float: left;
-				width: 50%;
+				width: 810;
 			}
 		</style>
 	</head>
