--- a/index.html
+++ b/index.html
@@ -15,32 +15,34 @@
 		</style>
 	</head>
 	<body>
-		<h1 style="text-align: center;">Model diaryzacyjny: 81% dokładności</h1>
-		<div class ="videoDiv">
-			<h2>HCavil1</h2>
-			<video width="800" height="615" src="cut.mp4" controls id="video">
-				<track src="test.vtt" kind="captions" srclang="pl" default></track>
-			</video>
-		</div>
-		<div class ="videoDiv">
-			<h2>HCavil2</h2>
-			<video width="800" height="615" src="cut.mp4" controls id="video">
-				<track src="test.vtt" kind="captions" srclang="pl" default></track>
-			</video>
-		</div>
-		<h1 style="text-align: center;">Model segmentowy: 79% dokładności</h1>
-		<div class ="videoDiv">
-			<h2>HCavil3</h2>
-			<video width="800" height="615" src="cut.mp4" controls id="video">
-				<track src="test.vtt" kind="captions" srclang="pl" default></track>
-			</video>
-		</div>
-		<div class ="videoDiv">
-			<h2>HCavil4</h2>
-			<video width="800" height="615" src="cut.mp4" controls id="video">
-				<track src="test.vtt" kind="captions" srclang="pl" default></track>
-			</video>
-		</div>
+		<div style="margin-left: auto; margin-right: auto;">
+			<h1 style="text-align: center;">Model diaryzacyjny: 81% dokładności</h1>
+			<div class ="videoDiv">
+				<h2>HCavil1</h2>
+				<video width="800" height="615" src="cut.mp4" controls id="video">
+					<track src="test.vtt" kind="captions" srclang="pl" default></track>
+				</video>
+			</div>
+			<div class ="videoDiv">
+				<h2>HCavil2</h2>
+				<video width="800" height="615" src="cut.mp4" controls id="video">
+					<track src="test.vtt" kind="captions" srclang="pl" default></track>
+				</video>
+			</div>
+			<h1 style="text-align: center;">Model segmentowy: 79% dokładności</h1>
+			<div class ="videoDiv">
+				<h2>HCavil3</h2>
+				<video width="800" height="615" src="cut.mp4" controls id="video">
+					<track src="test.vtt" kind="captions" srclang="pl" default></track>
+				</video>
+			</div>
+			<div class ="videoDiv">
+				<h2>HCavil4</h2>
+				<video width="800" height="615" src="cut.mp4" controls id="video">
+					<track src="test.vtt" kind="captions" srclang="pl" default></track>
+				</video>
+			</div>
+		<div>
 	</body>
 </html>
 
