--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 	<head>
 		<style>
+			#container{
+				width: 100%;
+				margin-left: auto;
+				margin-right: auto;
+			}
 			h1{
 				margin: 10 px;
 			}
@@ -16,7 +21,7 @@
 		</style>
 	</head>
 	<body>
-		<div style="margin-left: auto; margin-right: auto;">
+		<div id="container">
 			<h1 style="text-align: center;">Model diaryzacyjny: 81% dokładności</h1>
 			<div class ="videoDiv">
 				<h2>HCavil1</h2>
