--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<track src="test.vtt" kind="captions" srclang="pl" default></track>
 				</video>
 			</div>
-		<div>
+		</div>
 	</body>
 </html>
 
