--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 			h1{
 				margin: 10 px;
 			}
-			html{
-				height: 100%;
-				width: 100%;
-			}
 
 			.videoDiv {
 				float: left;
@@ -22,27 +18,28 @@
 		</style>
 	</head>
 	<body>
-		<h1 style="text-align: center;">Model diaryzacyjny: 81% dokładności</h1>
+		<h2 style="text-align: center;">Model diaryzacyjny: 81% dokładności</h2>
 		<div class ="videoDiv">
-			<h2>HCavil1</h2>
+			<h3 style="text-align: center;">HCavil1</h3>
 			<video width="95%" height="95%" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
 		<div class ="videoDiv">
-			<h2>HCavil2</h2>
+			<h3 style="text-align: center;">HCavil2</h3>
+			<video width="95%" height="95%" src="cut.mp4" controls id="video">
+				<track src="test.vtt" kind="captions" srclang="pl" default></track>
+			</video>
+		</div>
+		<h2 style="text-align: center;">Model segmentowy: 79% dokładności</h2>
+		<div class ="videoDiv">
+			<h3 style="text-align: center;">HCavil3</h3>
 			<video width="95%" height="95%" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
 		<div class ="videoDiv">
-			<h2>HCavil3</h2>
-			<video width="95%" height="95%" src="cut.mp4" controls id="video">
-				<track src="test.vtt" kind="captions" srclang="pl" default></track>
-			</video>
-		</div>
-		<div class ="videoDiv">
-			<h2>HCavil4</h2>
+			<h3 style="text-align: center;">HCavil4</h3>
 			<video width="95%" height="95%" src="cut.mp4" controls id="video">
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
