--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
-		<h2 style="text-align: center;">Model segmentowy: 79% dokładności</h2>
+		<div style="clear: both;">
+			<h2 style="text-align: center;">Model segmentowy: 79% dokładności</h2>
+		</div>
 		<div class ="videoDiv">
 			<h3 style="text-align: center;">HCavil3</h3>
 			<video width="95%" height="95%" src="cut.mp4" controls id="video">
