--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<track src="test.vtt" kind="captions" srclang="pl" default></track>
 			</video>
 		</div>
-		<div style="clear: both;">
+		<div style="clear: both; margin-top: 30px;">
 			<h2 style="text-align: center;">Model segmentowy: 79% dokładności</h2>
 		</div>
 		<div class ="videoDiv">
