Ramsey switch for NPortman

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
         <div class="row mb-4" >
 
             <div class="col-md-6 text-center" id="title" >
-                <h2>Model diaryzacyjny - GRamsay (Acc: 79%)</h2>
-                <video width="95%" height="95%" src="video/GRamsay003_3.mp4" controls id="video">
-                    <track src="subtitles/GRamsay003_3_diar.vtt" kind="captions" srclang="pl" default></track>
+                <h2>Model diaryzacyjny - NPortman (Acc: 90%)</h2>
+                <video width="95%" height="95%" src="video/NPortman002_2.mp4" controls id="video">
+                    <track src="subtitles/NPortman002_2_diar.vtt" kind="captions" srclang="pl" default></track>
                 </video>
             </div>
             <div class="col-md-6 text-center " id="title">
-                <h2>Model segmentowy - GRamsay (Acc: 47%)</h2>
-                <video width="95%" height="95%" src="video/GRamsay003_3.mp4" controls id="video">
-                    <track src="subtitles/GRamsay003_3_seq.vtt" kind="captions" srclang="pl" default></track>
+                <h2>Model segmentowy - NPortman (Acc: 58%)</h2>
+                <video width="95%" height="95%" src="video/NPortman002_2.mp4" controls id="video">
+                    <track src="subtitles/NPortman002_2_seq.vtt" kind="captions" srclang="pl" default></track>
                 </video>
             </div>
         </div>
