--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div class="row mb-4">
 
             <div class="col-md-6 text-center" id="title">
-                <h2>Najlepszy - HCavil (Acc: 99%)</h2>
+                <h2>Najlepsze nagranie - HCavil (Acc: 99%)</h2>
                 <video width="95%" height="95%" src="video/HCavil001_2.mp4" controls id="video">
                     <track src="subtitles/HCavil001_2.vtt" kind="captions" srclang="pl" default></track>
                 </video>
             </div>
             <div class="col-md-6 text-center " id="title">
-                <h2>Najgorszy - JKrupa (Acc: 53%)</h2>
+                <h2>Najgorsze nagranie - JKrupa (Acc: 53%)</h2>
                 <video width="95%" height="95%" src="video/JKrupa001_2.mp4" controls id="video">
                     <track src="subtitles/JKrupa001_2.vtt" kind="captions" srclang="pl" default></track>
                 </video>
@@ -40,19 +40,19 @@
         </div>
 
         <div class="row-flex justify-content-between  ">
-            <div class="col-md-12 text-center mt-5 mb-5" id="head_bar"><h1 class="display-4">Wyniki najlpeszego modelu segmentowego</h1></div>
+            <div class="col-md-12 text-center mt-5 mb-5" id="head_bar"><h1 class="display-4">Wyniki najlepszego modelu segmentowego</h1></div>
         </div>
 
         <div class="row mb-4" >
 
             <div class="col-md-6 text-center" id="title" >
-                <h2>Najlepszy - JKrupa (Acc: 97%)</h2>
+                <h2>Najlepsze nagranie - JKrupa (Acc: 97%)</h2>
                 <video width="95%" height="95%" src="video/JKrupa005_2.mp4" controls id="video">
                     <track src="subtitles/JKrupa005_2.vtt" kind="captions" srclang="pl" default></track>
                 </video>
             </div>
             <div class="col-md-6 text-center " id="title">
-                <h2>Najgorszy - BMars (Acc: 41%)</h2>
+                <h2>Najgorsze nagranie - BMars (Acc: 41%)</h2>
                 <video width="95%" height="95%" src="video/BMars001_2.mp4" controls id="video">
                     <track src="subtitles/BMars001_2.vtt" kind="captions" srclang="pl" default></track>
                 </video>
